package zeldiablo;

public class Escalier extends Case {

	@Override
	public boolean estTraversable() {
		// TODO Auto-generated method stub
		return true;
	}

	@Override
	public String getType() {
		// TODO Auto-generated method stub
		return "escalier";
	}

}
